--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 html{
     scroll-behavior: smooth;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 body{
     background: rgba(248, 249, 250, 1);
@@ -36,7 +37,6 @@ body{
 .nav__logo-text{
     cursor: pointer;
     color: #F8F9FA;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-transform: uppercase;
 }
 
@@ -52,7 +52,6 @@ body{
 
 .nav__menu-list{
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -60,7 +59,6 @@ body{
     cursor: pointer;
     list-style: none;
     text-transform: capitalize;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     font-size: 12px;
     line-height: 14px;
@@ -183,7 +181,6 @@ body{
     position: relative;
     width: 100%;
     height: 600px;
-    object-fit: cover;
 }
 
 .mySlides{
@@ -197,8 +194,6 @@ body{
 }
 
 .banner__content{
-    width: fit-content;
-    height: auto;
     padding-left: 70px;
     top: 278px;
     position: absolute;
@@ -206,8 +201,6 @@ body{
 
 .banner__content-category{
     width: fit-content;
-    position: static;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 10px;
     line-height: 12px;
     font-weight: bold;
@@ -223,7 +216,6 @@ body{
     font-size: 36px;
     line-height: 46px;
     font-weight: bold;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .banner__content-bottom{
@@ -233,12 +225,10 @@ body{
     font-size: 12px;
     line-height: 20px;
     font-weight: 100;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .banner__content-bottom-text{
     width: 420px;
-    height: auto;
 }
 
 .banner__content-bottom-line{
@@ -435,6 +425,7 @@ body{
     object-fit: contain;
     width: 100%;
     height: 600px;
+    border-radius: 5px;
 }
 
 .bigpost__content{
@@ -447,7 +438,6 @@ body{
 .bigpost__content-header{
     margin: auto;
     width: fit-content;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 10px;
     line-height: 12px;
     font-weight: bold;
@@ -513,11 +503,11 @@ body{
 .editors__blog-item{
     margin:0px 10px;
     position: relative;
-    max-width: 640px;
     height: 350px;
 }
 
 .editors__blog-item-img{
+    border-radius: 5px;
     object-fit: cover;
     height: 350px;
     width: 100%;
